# Numerical-Methods

./: False_position_method.py  Fixed_Pont_Method.py  README.md  Secant_Method.py  pyproject.toml
.devcontainer/: devcontainer.json
src/Unit1/: main.ipynb  methods.csv
